fix: remove commented-out report content button from event menu

--- a/src/app/components/event/event.component.html
+++ b/src/app/components/event/event.component.html
@@ -40,12 +40,11 @@
       <mat-icon>publish</mat-icon>
       Publish Event
     </button>
-    <button mat-menu-item (click)="publishEvent()">
+    <!-- <button mat-menu-item>
       <mat-icon>warning</mat-icon>
       Report Content
-    </button>
+    </button> -->
   </mat-menu>
-
 
 </app-user-profile>
 <div class="event-content" (click)="openEvent()">
