--- a/src/app/pages/profile/profile-notes/profile-notes.component.html
+++ b/src/app/pages/profile/profile-notes/profile-notes.component.html
@@ -15,7 +15,7 @@
       </div>
       } @else {
       <div class="notes-list">
-        @for(note of profileState.notes(); track note.event) {
+        @for(note of profileState.sortedNotes(); track note.event) {
         <mat-card class="note-card" appearance="outlined">
           <app-user-profile class="user-profile-thread" view="thread" [pubkey]="profileState.currentProfilePubkey()">
             <a class="date-link" (click)="layout.openEvent(note.event.id, note.event)" [matTooltip]="note.event.created_at * 1000 | date:'medium'" matTooltipPosition="below">
