feat: add QR code display for lightning address in profile header

--- a/src/app/pages/profile/profile-header/profile-header.component.html
+++ b/src/app/pages/profile/profile-header/profile-header.component.html
@@ -47,6 +47,7 @@
 
             @if (lightningAddress) {
             <div class="profile-item">
+                <qrcode [qrdata]="'Your data string'" [width]="256" [errorCorrectionLevel]="'M'"></qrcode>
                 <mat-icon>⚡️</mat-icon>
                 <span>{{ lightningAddress }}</span>
             </div>
