feat: update QR code generation to include 'npub:' prefix and refactor profile navigation path

--- a/src/app/pages/profile/profile-header/profile-header.component.html
+++ b/src/app/pages/profile/profile-header/profile-header.component.html
@@ -31,7 +31,7 @@
 
             @if (showProfileQrCode()) {
             <div class="qr-code-container">
-                <qrcode [qrdata]="npub()!" [width]="256" [errorCorrectionLevel]="'M'"></qrcode>
+                <qrcode [qrdata]="'npub:' + npub()!" [width]="256" [errorCorrectionLevel]="'M'"></qrcode>
             </div>
             }
 
