--- a/src/app/pages/badges/badges.component.scss
+++ b/src/app/pages/badges/badges.component.scss
@@ -175,6 +175,30 @@
     }
 }
 
+.initial-loading,
+.tab-loading {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 64px 24px;
+    text-align: center;
+
+    p {
+        margin-top: 16px;
+        font-size: 16px;
+        color: rgba(0, 0, 0, 0.6);
+    }
+}
+
+.initial-loading {
+    min-height: 400px;
+}
+
+.tab-loading {
+    min-height: 200px;
+}
+
 button mat-spinner {
     margin: 0 8px 0 0;
     display: inline-block;
