--- a/src/app/pages/badges/badge/badge.component.scss
+++ b/src/app/pages/badges/badge/badge.component.scss
@@ -13,7 +13,7 @@
         display: inline-block;
         margin-right: 8px;
         padding: 2px 6px;
-        background-color: rgba(0, 0, 0, 0.06);
+        // background-color: rgba(0, 0, 0, 0.06);
         border-radius: 4px;
         font-size: 12px;
     }
@@ -36,7 +36,7 @@
             justify-content: center;
             border-radius: 4px;
             overflow: hidden;
-            background-color: #f5f5f5;
+            // background-color: #f5f5f5;
             margin-right: 16px;
 
             img {
@@ -55,7 +55,7 @@
 
             p {
                 margin: 0 0 12px;
-                color: rgba(0, 0, 0, 0.6);
+                // color: rgba(0, 0, 0, 0.6);
             }
         }
 
@@ -80,7 +80,7 @@
 .badge-metadata {
     display: flex;
     align-items: center;
-    color: rgba(0, 0, 0, 0.6);
+    // color: rgba(0, 0, 0, 0.6);
     font-size: 14px;
     margin-bottom: 4px;
 
@@ -98,13 +98,13 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #e0e0e0;
+    // background-color: #e0e0e0;
 
     mat-icon {
         font-size: 36px;
         height: 36px;
         width: 36px;
-        color: #9e9e9e;
+        // color: #9e9e9e;
     }
 }
 
