--- a/src/app/pages/badges/badges.component.scss
+++ b/src/app/pages/badges/badges.component.scss
@@ -64,7 +64,7 @@
     justify-content: center;
     border-radius: 4px;
     overflow: hidden;
-    background-color: #f5f5f5;
+    // background-color: #f5f5f5;
 
     img {
         width: 100%;
@@ -79,7 +79,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #e0e0e0;
+    // background-color: #e0e0e0;
 
     mat-icon {
         font-size: 36px;
@@ -98,14 +98,14 @@
 
     p {
         margin: 0 0 12px;
-        color: rgba(0, 0, 0, 0.6);
+        // color: rgba(0, 0, 0, 0.6);
     }
 }
 
 .badge-issuer, .badge-date {
     display: flex;
     align-items: center;
-    color: rgba(0, 0, 0, 0.6);
+    // color: rgba(0, 0, 0, 0.6);
     font-size: 14px;
     margin-bottom: 4px;
 
@@ -146,7 +146,7 @@
     }
 
     p {
-        color: rgba(0, 0, 0, 0.6);
+        // color: rgba(0, 0, 0, 0.6);
     }
 }
 
@@ -187,7 +187,7 @@
     p {
         margin-top: 16px;
         font-size: 16px;
-        color: rgba(0, 0, 0, 0.6);
+        // color: rgba(0, 0, 0, 0.6);
     }
 }
 
